<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewParamWeekForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:text="@string/select_schedule_type"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnSelectClassicType"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="@string/classic_type"
        android:textSize="15sp"
        android:layout_below="@id/textViewParamWeekForm"
        android:layout_marginTop="200sp"
        android:layout_marginHorizontal="50sp"
        />
    <Button
        android:id="@+id/btnSelectEvenOddType"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:text="@string/even_or_odd_type"
        android:textSize="15sp"
        android:layout_below="@id/btnSelectClassicType"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="50sp"
        />

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/classic_type_info"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:layout_below="@id/btnSelectEvenOddType"
        android:layout_marginHorizontal="50sp"
        />

</RelativeLayout>