<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/days"
        android:layout_marginTop="20sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layoutDays"
            >

            <TextView
                android:id="@+id/class1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mathAnalysis"
                android:textColor="@color/lecture"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"
                android:clickable="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>

            <TextView
                android:id="@+id/class2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/algebra"
                android:textColor="@color/practice"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"
                />

            <TextView
                android:id="@+id/class3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/other"
                android:text="@string/analysisGeom"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/labClass"
                android:text="@string/yapisd"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text="@string/yapisd"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text="@string/yapisd"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text="@string/yapisd"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text="@string/yapisd"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>

            <Button
                android:id="@+id/btnConfirmMain"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:text="@string/save"
                android:textSize="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginHorizontal="50sp"
                />

                />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewAddWeekTemplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_week_template"
        android:textColor="@color/teal_700"
        android:textAlignment="center"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAddWeekTemplate"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:id="@+id/days">

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ПН"
            android:background="@color/teal_200"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ВТ"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="СР"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ЧТ"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ПТ"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="СБ"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>