<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewAddWeekTemplate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:textColor="@color/teal_700"
        android:textAlignment="center"
        android:layout_marginTop="25sp"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAddWeekTemplate"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal"
        android:id="@+id/days">

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ПН"
            android:background="@color/teal_200"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ВТ"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="СР"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ЧТ"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ПТ"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="СБ"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/days"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        android:id="@+id/dates"
        >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="6"
            android:textSize="20sp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/dates"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20sp"
        android:id="@+id/buttons"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrev"
            android:text="@string/prev"
            android:textSize="17sp"
            ></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="октябрь 2022"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="14sp"
            android:id="@+id/month"></TextView>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="17sp"></Button>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/everOrAdd"
        android:layout_below="@+id/buttons"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        android:text="Нечетная неделя"
        ></TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginTop="10sp"
        android:layout_below="@+id/everOrAdd"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/layoutDays"
            >

            <TextView
                android:id="@+id/class1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mathAnalysis"
                android:textColor="@color/lecture"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"
                android:clickable="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>

            <TextView
                android:id="@+id/class2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/algebra"
                android:textColor="@color/practice"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"
                />

            <TextView
                android:id="@+id/class3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/other"
                android:text="@string/analysisGeom"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/labClass"
                android:text="@string/yapisd"
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text=""
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text=""
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text=""
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>
            <TextView
                android:id="@+id/class8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/practice"
                android:text=""
                android:layout_marginHorizontal="10sp"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="1sp"
                android:backgroundTint="@color/black"
                android:focusable="false"/>

            />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>